[package]
name = "aymr"
description = "Plug and play various KV databases and access them over the network."
version = "0.0.1"
edition = "2021"
authors = ["makemake <vukasin@gostovic.me>, Rainshower Labs, contributors"]
homepage = "https://github.com/rainshowerLabs/aymr"
repository = "https://github.com/rainshowerLabs/aymr"
keywords = ["databases", "db", "lib", "database",]
categories = ["database"]
license = "GPL-2.0-or-later"

[dependencies]
sled = { version = "0.34.7", optional = true }
zerocopy = "0.7.32"

[features]
default = ["sled_pre"]
btreemap = []
hashmap = []
sled_pre = ["sled"]
